Isolate client cleaning

--- a/src/msu.SmartMeterHome.Client/fableconfig.json
+++ b/src/msu.SmartMeterHome.Client/fableconfig.json
@@ -2,7 +2,7 @@
     "projFile": "./app.fsx",
     "babelPlugins": ["transform-runtime"],
     "rollup": {
-        "dest": "./public/bundle.js",
+        "dest": "./public/bundle/bundle.js",
         "external": ["react", "react-dom"],
         "globals": {
             "react": "React",
