--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,9 @@
 init:
   - git config --global core.autocrlf input
+os: Visual Studio 2015
+before_build:
+  - cmd: set PATH=C:\Program Files (x86)\MSBuild\14.0\Bin;%PATH%
 build_script:
   - cmd: build.cmd BuildAll
 test: off
 version: 0.0.1.{build}
-artifacts:
-  - path: bin
-    name: bin
