--- a/package.json
+++ b/package.json
@@ -1,18 +1,31 @@
 {
   "private": true,
   "dependencies": {
+    "babel-core": "^6.23.1",
     "babel-runtime": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "remotedev": "^0.2.7",
+    "whatwg-fetch": "^2.0.2"
+  },
+  "devDependencies": {
+    "babel-loader": "^6.3.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react-hmre": "^1.1.1",
     "fable-compiler": "^0.7.42",
     "fable-core": "^0.7.26",
     "fable-elmish": "^0.8.1",
     "fable-elmish-debugger": "^0.1.2",
     "fable-elmish-react": "^0.8.2",
     "fable-powerpack": "^0.0.19",
-    "fable-react": "^0.8.5"
-  }
+    "fable-react": "^0.8.5",
+    "fs-extra": "^2.0.0",
+    "react-hot-loader": "^1.3.1",
+    "source-map-loader": "^0.1.6",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0"
+  },
+  "version": "0.19.1"
 }
