--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -48,6 +48,7 @@
     <Compile Include="Style.fs" />
     <Compile Include="Utils.fs" />
     <Compile Include="pages/Menu.fs" />
+    <Compile Include="pages/WishList.fs" />
     <Compile Include="pages/Login.fs" />
     <Compile Include="App.fs" />
   </ItemGroup>
