--- a/test/UITests/UITests.fsproj
+++ b/test/UITests/UITests.fsproj
@@ -8,8 +8,8 @@
     <ProjectGuid>95d2789c-8b80-49e7-915a-ac670c36d3fb</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>IntegrationTests</RootNamespace>
-    <AssemblyName>IntegrationTests</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <AssemblyName>UITests</AssemblyName>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.3.0.0</TargetFSharpCoreVersion>
     <Name>Canopy.Tests</Name>
     <TargetFrameworkProfile />
@@ -26,7 +26,8 @@
     <StartAction>Project</StartAction>
     <StartProgram>
     </StartProgram>
-    <StartArguments>debug --summary</StartArguments>
+    <StartArguments>
+    </StartArguments>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -62,6 +63,13 @@
     </When>
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
+  <Choose>
+    <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And ($(TargetFrameworkVersion) == 'v4.5' Or $(TargetFrameworkVersion) == 'v4.5.1' Or $(TargetFrameworkVersion) == 'v4.5.2' Or $(TargetFrameworkVersion) == 'v4.5.3' Or $(TargetFrameworkVersion) == 'v4.6' Or $(TargetFrameworkVersion) == 'v4.6.1' Or $(TargetFrameworkVersion) == 'v4.6.2' Or $(TargetFrameworkVersion) == 'v4.6.3')">
+      <PropertyGroup>
+        <__paket__Selenium_WebDriver_ChromeDriver_targets>Selenium.WebDriver.ChromeDriver</__paket__Selenium_WebDriver_ChromeDriver_targets>
+      </PropertyGroup>
+    </When>
+  </Choose>
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
@@ -72,7 +80,6 @@
   -->
   <Import Project="..\..\.paket\paket.targets" />
   <ItemGroup>
-    <Compile Include="ExpectoHelper.fs" />
     <Compile Include="Tests.fs" />
     <Compile Include="Runner.fs" />
     <None Include="paket.references" />
@@ -448,4 +455,5 @@
       </ItemGroup>
     </When>
   </Choose>
+  <Import Project="..\..\packages\test\Selenium.WebDriver.ChromeDriver\build\$(__paket__Selenium_WebDriver_ChromeDriver_targets).targets" Condition="Exists('..\..\packages\test\Selenium.WebDriver.ChromeDriver\build\$(__paket__Selenium_WebDriver_ChromeDriver_targets).targets')" Label="Paket" />
 </Project>
