--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,6 @@ os: Visual Studio 2015
 before_build:
   - cmd: set PATH=C:\Program Files (x86)\MSBuild\14.0\Bin;%PATH%
 build_script:
-  - cmd: build.cmd Build
+  - cmd: build.cmd All
 test: off
 version: 0.0.1.{build}
