--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,19 @@ addons:
       - libstdc++-4.9-dev
       - libunwind8-dev
 
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
+
 before_install:
   - chmod +x build.sh
+
+install:
+  - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+  - sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
+  - sudo apt-get update
+  - sudo apt-get install google-chrome-stable  
  
 script: 
   - ./build.sh All
