--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-hot-loader": "^1.3.1",
     "source-map-loader": "^0.1.6",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.3.0"
+    "webpack-dev-server": "^2.3.0",
+    "phantomjs": "^2.1.7"
   },
   "version": "0.19.1"
 }
