--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "fable-core": "^0.7.28",
     "fable-elmish": "^0.8.1",
     "fable-elmish-debugger": "^0.1.2",
-    "fable-elmish-react": "0.8.2",
+    "fable-elmish-react": "^0.8.2",
     "fable-powerpack": "^0.0.19",
     "fable-react": "^0.8.5",
     "fs-extra": "^2.0.0",
