--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,10 @@
 init:
   - git config --global core.autocrlf input
+environment:
+  nodejs_version: "6.0"
+install:
+  # Get the latest stable version of Node.js or io.js
+  - ps: Install-Product node $env:nodejs_version
 os: Visual Studio 2015
 before_build:
   - cmd: set PATH=C:\Program Files (x86)\MSBuild\14.0\Bin;%PATH%
