--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react-hmre": "^1.1.1",
-    "fable-compiler": "^0.7.49",
+    "fable-compiler": "^0.7.50",
     "fable-core": "^0.7.29",
     "fable-elmish": "^0.8.1",
-    "fable-elmish-debugger": "^0.1.2",
+    "fable-elmish-debugger": "^0.9.0-beta-4",
     "fable-elmish-react": "^0.8.3",
     "fable-powerpack": "^0.0.20",
     "fable-react": "^0.8.5",
-    "fs-extra": "^2.1.1",
+    "fs-extra": "^2.1.2",
     "react-hot-loader": "^1.3.1",
     "source-map-loader": "^0.2.0",
-    "webpack": "^2.2.1",
+    "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
   },
   "version": "0.19.1"
