--- a/package.json
+++ b/package.json
@@ -6,24 +6,21 @@
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
-    "remotedev": "^0.2.7",
-    "whatwg-fetch": "^2.0.3"
+    "remotedev": "^0.2.7"
   },
   "devDependencies": {
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react-hmre": "^1.1.1",
-    "fable-compiler": "^0.7.50",
-    "fable-core": "^0.7.29",
-    "fable-elmish": "^0.8.1",
+    "cross-env": "^4.0.0",
+    "fable-core": "^1.0.0-narumi-906",
+    "fable-elmish": "^0.9.0-beta-6",
+    "fable-elmish-browser": "^0.9.0-beta-3",    
     "fable-elmish-debugger": "^0.9.0-beta-4",
-    "fable-elmish-react": "^0.8.3",
-    "fable-powerpack": "^0.0.20",
-    "fable-react": "^0.8.5",
-    "fs-extra": "^2.1.2",
-    "react-hot-loader": "^1.3.1",
-    "source-map-loader": "^0.2.0",
+    "fable-elmish-react": "^0.9.0-beta-4",
+    "fable-loader": "^1.0.0-narumi-905",
+    "fable-powerpack": "^1.0.0-narumi-3",
+    "fable-react": "^1.0.0-narumi-4",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
   },
