--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -11,9 +11,7 @@
     <Compile Include="WishList.fs" />
     <Compile Include="Server.fs" />
     <Compile Include="Program.fs" />
-    <PackageReference Include="FSharp.NET.Sdk" Version="1.0.0-beta-060000" PrivateAssets="All" />
-    <DotNetCliToolReference Include="dotnet-compile-fsc" Version="1.0.0-preview2-020000" />
-    <EmbeddedResource Include="**\*.resx" />
+    <PackageReference Include="FSharp.NET.Sdk" Version="1.0.*" PrivateAssets="All" />
     <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="1.0.0" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
