--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -7,6 +7,7 @@
     <Compile Include="Shared/Domain.fs" />
     <Compile Include="ServerTypes.fs" />
     <Compile Include="TokenUtils.fs" />
+    <Compile Include="JsonUtils.fs" />    
     <Compile Include="Auth.fs" />
     <Compile Include="WishList.fs" />
     <Compile Include="Server.fs" />
