--- a/package.json
+++ b/package.json
@@ -1,28 +1,19 @@
 {
   "private": true,
   "dependencies": {
-    "babel-core": "^6.24.0",
     "babel-runtime": "^6.23.0",
-    "react": "^15.4.2",
-    "react-bootstrap": "^0.30.8",
-    "react-dom": "^15.4.2",
+    "react": "^15.5.4",
+    "react-bootstrap": "^0.31.0",
+    "react-dom": "^15.5.4",
     "remotedev": "^0.2.7"
   },
   "devDependencies": {
-    "babel-loader": "^6.4.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.0",
-    "cross-env": "^4.0.0",
-    "fable-core": "^1.0.0-narumi-906",
-    "fable-elmish": "^0.9.0-beta-6",
-    "fable-elmish-browser": "^0.9.0-beta-3",    
-    "fable-elmish-debugger": "^0.9.0-beta-4",
-    "fable-elmish-react": "^0.9.0-beta-4",
-    "fable-loader": "^1.0.0-narumi-905",
-    "fable-powerpack": "^1.0.0-narumi-3",
-    "fable-react": "^1.0.0-narumi-4",
-    "webpack": "^2.3.2",
-    "webpack-dev-server": "^2.4.2"
-  },
-  "version": "0.19.1"
+    "babel-preset-es2015": "^6.24.1",
+    "fable-loader": "^1.0.0",
+    "webpack": "^2.5.1",
+    "webpack-dev-server": "^2.4.5"
+  }
 }
