--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: csharp
-sudo: false  # use the new container-based Travis infrastructure 
+sudo: false  # use the new container-based Travis infrastructure
 dist: trusty
 
 addons:
@@ -12,6 +12,17 @@ addons:
 
 before_install:
   - chmod +x build.sh
- 
-script: 
+  # Repo for newer Node.js versions
+  - curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
+  # Repo for Yarn
+  - sudo apt-key adv --keyserver pgp.mit.edu --recv D101F7899D41F3C3
+  - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+  - sudo apt-get update -qq
+  - sudo apt-get install -y -qq yarn
+
+cache:
+  directories:
+  - $HOME/.yarn-cache
+
+script:
   - ./build.sh All
