Rename server modules for (hopefully) clarity.
* Banish the Utils names.
* Hopefully nicer names for Token and server modules.

--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -6,11 +6,11 @@
   <ItemGroup>
     <Compile Include="Shared/Domain.fs" />
     <Compile Include="ServerTypes.fs" />
-    <Compile Include="TokenUtils.fs" />
-    <Compile Include="JsonUtils.fs" />
+    <Compile Include="JsonWebToken.fs" />
+    <Compile Include="FableJson.fs" />
     <Compile Include="Auth.fs" />
     <Compile Include="WishList.fs" />
-    <Compile Include="Server.fs" />
+    <Compile Include="WebServer.fs" />
     <Compile Include="Program.fs" />
     <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="1.0.0" />
   </ItemGroup>
