--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -11,7 +11,8 @@
     <Compile Include="pages/WishList.fs" />
     <Compile Include="pages/Login.fs" />
     <Compile Include="App.fs" />
-    <DotNetCliToolReference Include="dotnet-fable" Version="1.0.4" />
+    <!--Keep this version synced with dotnet-fable in .fsproj-->
+    <DotNetCliToolReference Include="dotnet-fable" Version="1.1.3" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
