Add debugger config

--- a/test/ServerTests/ServerTests.fsproj
+++ b/test/ServerTests/ServerTests.fsproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <DebugType>portable</DebugType>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Tests.fs" />
