--- a/package.json
+++ b/package.json
@@ -14,6 +14,19 @@
     "babel-preset-es2015": "^6.24.1",
     "fable-loader": "^1.0.5",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.5.0"
+    "webpack-dev-server": "^2.5.0",
+    "concurrently": "^3.5.0"
+  },
+  "scripts": {
+    "prebuildServer": "dotnet restore src/Server/Server.fsproj",
+    "buildServer": "dotnet build src/Server/Server.fsproj",
+
+    "prebuildServerTest": "dotnet restore test/ServerTests/ServerTests.fsproj",
+    "buildServerTest": "dotnet build test/ServerTests/ServerTests.fsproj",
+
+    "restoreClient": "cd src/Client && yarn install",
+    "restoreNetClient": "dotnet restore src/Client/Client.fsproj",
+    "prestartClient": "concurrently \"npm run restoreClient\" \"npm run restoreNetClient\" ",
+    "startClient": "cd src/Client && dotnet fable webpack-dev-server"
   }
 }
