Support for Azure Tables.

--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -2,7 +2,6 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <DebugType>portable</DebugType>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Shared/Domain.fs" />
@@ -11,8 +10,12 @@
     <Compile Include="FableJson.fs" />
     <Compile Include="Auth.fs" />
     <Compile Include="WishList.fs" />
+    <Compile Include="Storage/FileSystem.fs" />
+    <Compile Include="Storage/AzureTables.fs" />
     <Compile Include="WebServer.fs" />
     <Compile Include="Program.fs" />
+  </ItemGroup>
+  <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="1.0.0" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
